Make FoldContext have equality